# libuv-cmake

./: CMakeLists.txt  README.md  uv-config.cmake.in
test-build/: CMakeLists.txt  main.c
